# mariorl

./: .gitignore  .pre-commit-config.yaml  PROJECT_STRUCTURE.md  README.md  legacy_code.md  pyproject.toml
docker/: .dockerignore  Dockerfile
docs/: RUNPOD.md
mario_rl/: __init__.py
mario_rl/agent/: __init__.py  ddqn_net.py  neural.py  ppo_net.py  replay.py  world_model.py
mario_rl/buffers/: __init__.py  nstep.py  prioritized.py  sum_tree.py
mario_rl/core/: __init__.py  config.py  device.py  elite_buffer.py  env_runner.py  episode.py  exploration.py  metrics.py  replay_buffer.py  reward_normalizer.py  timing.py  types.py  ui_reporter.py  weight_sync.py
mario_rl/dashboard/: __init__.py  aggregators.py  app.py  chart_helpers.py  data_loaders.py  query.py
mario_rl/dashboard/tabs/: __init__.py  analysis.py  coordinator.py  levels.py  workers.py
mario_rl/distributed/: __init__.py  coordinator.py  events.py  shm_gradient_pool.py  shm_heartbeat.py  training_coordinator.py  training_worker.py  worker.py
mario_rl/environment/: __init__.py  env_factory.py  factory.py  frame_stack.py  mariogym.py  motion_tracker.py  snapshot_wrapper.py  wrappers.py
mario_rl/learners/: __init__.py  base.py  ddqn.py  dreamer.py  muzero.py
mario_rl/mcts/: __init__.py  adapters.py  config.py  explorer.py  node.py  protocols.py
mario_rl/metrics/: __init__.py  aggregator.py  levels.py  logger.py  schema.py  tiered_writer.py
mario_rl/metrics/collectors/: __init__.py  composite.py  coordinator.py  ddqn.py  dreamer.py  mario.py  protocol.py  system.py
mario_rl/models/: __init__.py  base.py  ddqn.py  dreamer.py  muzero.py  protocols.py  ram_dqn.py
mario_rl/training/: __init__.py  appo_learner.py  appo_worker.py  ddqn_learner.py  ddqn_status.py  ddqn_worker.py  learner.py  ppo_learner.py  ppo_worker.py  rollout_buffer.py  shared_buffer.py  shared_gradient_tensor.py  shared_gradients.py  snapshot.py  snapshot_handler.py  snapshot_state_machine.py  training_ui.py  worker.py  world_model_learner.py
mario_rl/ui/: __init__.py  metrics.py  training_ui.py
mario_rl/utils/: __init__.py  metrics.py
scripts/: analyze_agent_perception.py  analyze_death_sequences.py  benchmark_shared_gradients.py  benchmark_worker_ops.py  diagnose_decoder_mode_collapse.py  old_mcts.py  play_mario.py  plot_training.py  ppo_vec.py  ppo_vec_threaded.py  profile_init_contention.py  profile_worker_startup.py  train.py  train.sh  train_appo.py  train_auxiliary_encoder.py  train_ddqn_distributed.py  train_ddqn_simple.py  train_distributed.py  train_modular.py  train_ppo.py  train_ppo_custom.py  train_ppo_simple.py  train_runpod.sh  training_dashboard.py  visualize_frame_representations.py  visualize_network_attention.py  visualize_world_model_dynamics.py  visualize_world_model_reconstruction.py  viz_detailed_frames.py  viz_episode_video.py  watch.py
tests/: __init__.py  test_shared_gradient_tensor.py
tests/buffers/: test_priority_multiplier.py
tests/core/: test_config.py  test_elite_buffer.py  test_env_runner.py  test_experience_buffer_per.py  test_metrics_tracker.py  test_replay_buffer.py
tests/dashboard/: test_aggregators.py  test_app_smoke.py
tests/distributed/: __init__.py  test_coordinator.py  test_events.py  test_shm_gradient_pool.py  test_shm_heartbeat.py  test_training_coordinator.py  test_training_worker.py  test_worker.py
tests/environment/: test_frame_stack.py  test_lazy_initialization.py  test_mariogym.py  test_motion_tracker.py  test_reward_shaping.py
tests/integration/: test_ram_training.py
tests/learners/: __init__.py  test_ddqn_learner.py  test_dreamer_learner.py  test_muzero_learner.py
tests/metrics/: test_aggregator.py  test_checkpoint.py  test_levels.py  test_logger.py  test_schema.py  test_tiered_writer.py
tests/metrics/collectors/: __init__.py  test_composite.py  test_coordinator.py  test_coordinator_protocol.py  test_ddqn.py  test_dreamer.py  test_mario.py  test_protocol.py  test_system.py
tests/models/: test_ddqn.py  test_dreamer.py  test_muzero.py  test_protocols.py  test_ram_dqn.py
tests/training/: test_snapshot_handler.py  test_snapshot_state_machine.py
