[project]
name = "mario-rl"
version = "0.1.0"
description = "Reinforcement Learning for Super Mario Bros with World Models"
authors = [{ name = "Ali Mosavian", email = "mosavian.ali@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "gymnasium>=0.29.0",
    "gym-super-mario-bros @ git+https://github.com/ali-mosavian/gym-super-mario-bros.git@7.6.3",
    "nes-py>=8.2.1",
    "pyglet>=1.4.0,<=1.5.21",
    "click>=8.1.0",
    "pillow>=10.0.0",
    "lz4>=4.0.0",
    "scikit-image>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "isort>=6.0.0",
    "pre-commit>=3.5.0",
]

[project.scripts]
mario-train = "scripts.train:main"
mario-watch = "scripts.watch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mario_rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (ruff format handles this)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"mario_rl/training/worker.py" = ["E402"]  # intentional code before imports for multiprocessing
"scripts/watch.py" = ["E402"]  # intentional code before imports for multiprocessing

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
length_sort = true
length_sort_sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]
