[project]
name = "mario-rl"
version = "0.1.0"
description = "Reinforcement Learning for Super Mario Bros with World Models"
authors = [{ name = "Ali Mosavian", email = "mosavian.ali@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = { text = "MIT" }

dependencies = [
    "torch>=2.0.0",
    "numpy>=1.24.0,<2.0.0",
    "gymnasium>=0.29.0",
    "gym-super-mario-bros @ git+https://github.com/ali-mosavian/gym-super-mario-bros.git@7.9.0",
    "nes-py>=9.3.0",
    "pyglet>=1.4.0,<=1.5.21",
    "click>=8.1.0",
    "pillow>=10.0.0",
    "lz4>=4.0.0",
    "opencv-python-headless>=4.8.0", # Fast image processing (replaces slow skimage.resize)
    "scikit-image>=0.21.0",
    "stable-baselines3[extra]>=2.0.0",
    "pytorch-msssim>=1.0.0", # SSIM loss for world model decoder
    "pyzmq>=25.0.0", # ZeroMQ for non-blocking event messaging
    "msgpack>=1.0.0", # Fast binary serialization for events
    "duckdb>=1.4.3",
    "scikit-learn>=1.8.0",
    "opencv-python>=4.11.0.86",
    "streamlit>=1.52.2",
    "plotly>=6.5.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "ruff>=0.0.285",
    "mypy>=1.5.0",
    "isort>=6.0.0",
    "pre-commit>=3.5.0",
]
plot = [
    "matplotlib>=3.8.0",
    "pandas>=2.0.0",
]
dashboard = [
    "streamlit>=1.40.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]

[project.scripts]
mario-train = "scripts.train:main"
mario-train-ppo = "scripts.train_ppo:main"
mario-train-ppo-custom = "scripts.train_ppo_custom:main"
mario-train-appo = "scripts.train_appo:main"
mario-train-simple = "scripts.train_ppo_simple:main"
mario-train-ddqn = "scripts.train_ddqn_simple:main"
mario-train-ddqn-dist = "scripts.train_ddqn_distributed:main"
mario-watch = "scripts.watch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["mario_rl"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
]
ignore = [
    "E501",  # line too long (ruff format handles this)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]  # unused imports in __init__.py
"mario_rl/training/worker.py" = ["E402"]  # intentional code before imports for multiprocessing
"scripts/watch.py" = ["E402"]  # intentional code before imports for multiprocessing

[tool.isort]
profile = "black"
line_length = 120
force_single_line = true
length_sort = true
length_sort_sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
force_sort_within_sections = true

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
ignore_missing_imports = true
warn_unused_ignores = false
exclude = ["tests/"]
# Suppress warnings about untyped third-party libraries
[[tool.mypy.overrides]]
module = ["plotly.*", "pandas.*", "streamlit.*"]
ignore_missing_imports = true

# PyTorch model files - tensor operations have complex type signatures
[[tool.mypy.overrides]]
module = [
    "mario_rl.models.*",
    "mario_rl.agent.*",
    "mario_rl.training.shared_gradient_tensor",
]
warn_return_any = false
disable_error_code = ["assignment", "union-attr"]

# Environment wrappers - gym/gymnasium have incomplete type stubs
[[tool.mypy.overrides]]
module = [
    "mario_rl.environment.*",
]
warn_return_any = false
disable_error_code = ["attr-defined", "call-overload", "arg-type", "override", "return-value", "index"]

# Core replay buffer - has complex generic type interactions
[[tool.mypy.overrides]]
module = ["mario_rl.core.replay_buffer"]
disable_error_code = ["arg-type", "assignment"]

# Distributed training - has complex type interactions
[[tool.mypy.overrides]]
module = [
    "mario_rl.distributed.*",
    "mario_rl.mcts.adapters",
]
disable_error_code = ["attr-defined", "call-arg", "has-type", "union-attr", "no-any-return", "assignment", "var-annotated", "return-value"]

# Learners - complex tensor type interactions
[[tool.mypy.overrides]]
module = ["mario_rl.learners.*"]
disable_error_code = ["operator", "union-attr", "arg-type", "assignment", "call-arg"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pytest",
]
